update: height setting

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,9 @@
     <title>backdrop</title>
     <meta charset="utf-8" />
   </head>
-  <body></body>
+  <body>
+    <div id="background">
+      <div id="contents">hogeeeee</div>
+    </div>
+  </body>
 </html>
