--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,36 @@
   <head>
     <title>backdrop</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
     <div id="background">
+      <section><img src='./assets/match.png' class='logo'></img></section>
+      <section>
+          <h2>おすすめコミュニティ</h2>
+          <div class='image-wrapper'>
+            <div class='card react'>react</div>
+            <div class='card redux'>redux</div>
+            <div class='card webpack'>webpack</div>
+            <div class='card babel'>babel</div>
+          </div>
+      </section>
+      <section>
+        <h2>あなたにおすすめ人間</h2>
+        <div class='image-wrapper'>
+                <img src='./assets/yk1.jpg' class='icon'></img>
+                <img src='./assets/yk2.jpg' class='icon'></img>
+                <img src='./assets/yk3.jpg' class='icon'></img>
+                <img src='./assets/yk4.jpg' class='icon'></img>
+                <img src='./assets/yk5.jpg' class='icon'></img>
+                <img src='./assets/yk6.jpg' class='icon'></img>
+                <img src='./assets/yk7.jpg' class='icon'></img>
+                <img src='./assets/yk8.jpg' class='icon'></img>
+                <img src='./assets/yk9.jpg' class='icon'></img>
+        </div>
+        
+      </section>
+     
       <div id="contents">hogeeeee</div>
     </div>
   </body>
