--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,22 @@
   </head>
   <body>
     <div id="background">
-      <section><img src='./assets/match.png' class='logo'></img></section>
+      <section>
+          <img src='./assets/match.png' class='logo'></img>
+    </section>
       
       <section>
         <h2>あなたにおすすめ人間</h2>
         <div class='image-wrapper'>
-                <img src='./assets/yk1.jpg' class='icon'></img>
-                <img src='./assets/yk2.jpg' class='icon'></img>
-                <img src='./assets/yk3.jpg' class='icon'></img>
-                <img src='./assets/yk4.jpg' class='icon'></img>
-                <img src='./assets/yk5.jpg' class='icon'></img>
-                <img src='./assets/yk6.jpg' class='icon'></img>
-                <img src='./assets/yk7.jpg' class='icon'></img>
-                <img src='./assets/yk8.jpg' class='icon'></img>
-                <img src='./assets/yk9.jpg' class='icon'></img>
+                <img src='./assets/yk1.jpg' class='icon' id='yk1'></img>
+                <img src='./assets/yk2.jpg' class='icon' id='yk2'></img>
+                <img src='./assets/yk3.jpg' class='icon' id='yk3'></img>
+                <img src='./assets/yk4.jpg' class='icon' id='yk4'></img>
+                <img src='./assets/yk5.jpg' class='icon' id='yk5'></img>
+                <img src='./assets/yk6.jpg' class='icon' id='yk6'></img>
+                <img src='./assets/yk7.jpg' class='icon' id='yk7'></img>
+                <img src='./assets/yk8.jpg' class='icon' id='yk8'></img>
+                <img src='./assets/yk9.jpg' class='icon' id='yk9'></img>
         </div>
       </section>
 
@@ -34,7 +36,15 @@
             </div>
         </section>
      
-      <div id="contents">hogeeeee</div>
+      <div id="contents">
+          <img id='profimg'></img>
+          <p class='label'>名前</p>
+          <p id='name' class='proftext'></p>
+          <p class='label'>年齢</p>
+          <p id='age' class='proftext'></p>
+          <p class='label'>自己紹介</p>
+          <p id='description' class='proftext'></p>
+      </div>
     </div>
   </body>
 </html>
