--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
       <section>
             <h2>おすすめコミュニティ</h2>
             <div class='image-wrapper'>
-              <div class='card react'>react</div>
-              <div class='card redux'>redux</div>
-              <div class='card webpack'>webpack</div>
-              <div class='card babel'>babel</div>
+              <div class='card react'><span>react</span></div>
+              <div class='card redux'><span>redux</span></div>
+              <div class='card webpack'><span>webpack</span></div>
+              <div class='card babel'><span>babel</span></div>
             </div>
         </section>
      
