fix: closing logic

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
       <section>
         <h2>あなたにおすすめ人間</h2>
         <div class='image-wrapper'>
-                <img src='./assets/yk1.jpg' class='icon' id='yk1'></img>
-                <img src='./assets/yk2.jpg' class='icon' id='yk2'></img>
-                <img src='./assets/yk3.jpg' class='icon' id='yk3'></img>
-                <img src='./assets/yk4.jpg' class='icon' id='yk4'></img>
-                <img src='./assets/yk5.jpg' class='icon' id='yk5'></img>
-                <img src='./assets/yk6.jpg' class='icon' id='yk6'></img>
-                <img src='./assets/yk7.jpg' class='icon' id='yk7'></img>
-                <img src='./assets/yk8.jpg' class='icon' id='yk8'></img>
-                <img src='./assets/yk9.jpg' class='icon' id='yk9'></img>
+                <img src='./assets/yk1.jpg' class='icon' id='yk1' loading="lazy"></img>
+                <img src='./assets/yk2.jpg' class='icon' id='yk2' loading="lazy"></img>
+                <img src='./assets/yk3.jpg' class='icon' id='yk3' loading="lazy"></img>
+                <img src='./assets/yk4.jpg' class='icon' id='yk4' loading="lazy"></img>
+                <img src='./assets/yk5.jpg' class='icon' id='yk5' loading="lazy"></img>
+                <img src='./assets/yk6.jpg' class='icon' id='yk6' loading="lazy"></img>
+                <img src='./assets/yk7.jpg' class='icon' id='yk7' loading="lazy"></img>
+                <img src='./assets/yk8.jpg' class='icon' id='yk8' loading="lazy"></img>
+                <img src='./assets/yk9.jpg' class='icon' id='yk9' loading="lazy"></img>
         </div>
       </section>
 
@@ -37,7 +37,7 @@
         </section>
      
       <div id="contents">
-          <img id='profimg'></img>
+          <img id='profimg' loading="lazy"></img>
           <p class='label'>名前</p>
           <p id='name' class='proftext'></p>
           <p class='label'>年齢</p>
